# transformers

./: .gitignore  README.md  examples.py  jekyll_conf.py  pyproject.toml
nb/: another_annotated_transformer.ipynb  attention.ipynb  positional_encoding.ipynb
src/reproductions/: nb_export.py  transformers.py  transformers_backup.py
