[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reproductions"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Aaron Niskin", email = "amniskin@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "jax[cpu]",
  "flax",
  "optax",
  "chex",
  "clu",
  "tqdm",
  "mlflow[extras]"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/unknown/reproductions#readme"
Issues = "https://github.com/unknown/reproductions/issues"
Source = "https://github.com/unknown/reproductions"

[tool.hatch.version]
path = "src/reproductions/__about__.py"

[tool.hatch.envs.default]
python = "310"
